Refactored SudokuField.java to generics, removed unnecessary SudokuSolutions.java class